--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "repository": {
     "type": "git",
     "url": "https://idontknow/todo.git"
-  }
+  },
+  "keywords": [
+    "freecodecamp",
+    "backend"
+  ]
 }
