--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "moment": "^2.10.2"
   },
   "author": "Vishalakshi Senthilnadan",
   "description": "This project is to learn backend by free Code Camp",
   "main": "server.js",
+  "license": "MIT",
+  "version": "1.1.0",
   "scripts": {
     "start": "node server.js"
   },
